feat: add base input/label component

--- a/src/SocialMediaDashboard.WebApp/ClientApp/src/components/home/styles/home.scss
+++ b/src/SocialMediaDashboard.WebApp/ClientApp/src/components/home/styles/home.scss
@@ -1,9 +1,9 @@
 .aboutContainer {
-    float: left;
-    max-width: 45%;
+	float: left;
+	max-width: 45%;
 }
 
-.authContainer {
-    float: right;
-    max-width: 45%;
+.auth {
+	float: right;
+	max-width: 45%;
 }
