feat: add html mail templates

--- a/src/SocialMediaDashboard.Web/Views/_ViewImports.cshtml
+++ b/src/SocialMediaDashboard.Web/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@using SocialMediaDashboard.Application.Models
+﻿@using SocialMediaDashboard.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
