--- a/src/SocialMediaDashboard.Web/Views/Mail/Confirm.cshtml
+++ b/src/SocialMediaDashboard.Web/Views/Mail/Confirm.cshtml
@@ -1,8 +1,53 @@
-﻿@model EmailDto
+﻿@model EmailViewModel
 
 @{
     Layout = "_EmailLayout";
 }
 
-<h1>Hello, @Model.Name!</h1>
-<a href="@Model.Link" target="_blank">Yes, activate my account</a>
+<body style="margin: 0; padding: 0; background-color: #f7f9fd">
+    <center>
+        <table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FFFFFF">
+            <tr>
+                <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
+            </tr>
+            <tr>
+                <td height="100" valign="center" style="padding: 0 20px;">
+                    <p class="font font__size_logo">Social Media Dashboard</p>
+                </td>
+            </tr>
+            <tr>
+                <td height="50" valign="center" style="padding: 0 20px;">
+                    <p class="font font__size_big">Hello, @Model.Name!</p>
+                </td>
+            </tr>
+            <tr>
+                <td height="50" valign="center" style="padding: 0 20px;">
+                    <p class="font font__size-medium">
+                        We are almost done creating your account. Click the link below to verify
+                        this email address.
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td height="100" style="padding-left: 20px;">
+                    <a href="@Model.Link" target="_blank" class="font font__size-medium button">Verify your account</a>
+                </td>
+            </tr>
+            <tr style="background-color: #f0f0f0">
+                <td align="center" valign="center" style="padding: 20px;">
+                    <p class="font font__size-small">
+                        If you did not register, someone may have registered with your information by mistake. Contact Us for further assistance.
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td align="center" valign="center" style="padding: 20px;">
+                    <span class="font font__size-small">© 2020 Social Media Dashboard - All rights reserved</span>
+                </td>
+            </tr>
+            <tr>
+                <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
+            </tr>
+        </table>
+    </center>
+</body>
