--- a/src/SocialMediaDashboard.Web/Views/Shared/_EmailLayout.cshtml
+++ b/src/SocialMediaDashboard.Web/Views/Shared/_EmailLayout.cshtml
@@ -1,13 +1,50 @@
-﻿<!DOCTYPE html>
-
-<html>
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        .font {
+            font-family: 'Open Sans', sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            color: #202842;
+        }
+
+        .font__size_logo {
+            font-size: 40px;
+            line-height: 44px;
+        }
+
+        .font__size_big {
+            font-size: 20px;
+            line-height: 34px;
+        }
+
+        .font__size-medium {
+            font-size: 16px;
+            line-height: 22px;
+        }
+
+        .font__size-small {
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+        .button {
+            cursor: pointer;
+            padding: 16px 80px;
+            background: #3457DC;
+            border-radius: 3px;
+            text-align: center;
+            text-decoration: none;
+            color: #FFFFFF;
+            border: none;
+        }
+    </style>
 </head>
-<body>
-    <div>
-        @RenderBody()
-    </div>
-</body>
+    @RenderBody()
 </html>
