--- a/src/SocialMediaDashboard.Web/Views/Mail/Confirm.cshtml
+++ b/src/SocialMediaDashboard.Web/Views/Mail/Confirm.cshtml
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <td height="100" style="padding-left: 20px;">
-                    <a href="@Model.Link" target="_blank" class="font font__size-medium button">Verify your account</a>
+                    <a href="@Model.Link" target="_blank" class="font font__size-medium button" style="color: #fff">Verify your account</a>
                 </td>
             </tr>
             <tr style="background-color: #f0f0f0">
