--- a/src/SocialMediaDashboard.Web/Views/Mail/Restore.cshtml
+++ b/src/SocialMediaDashboard.Web/Views/Mail/Restore.cshtml
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <td height="100" style="padding-left: 20px;">
-                    <a href="@Model.Link" target="_blank" class="font font__size-medium button">Reset your password</a>
+                    <a href="@Model.Link" target="_blank" class="font font__size-medium button" style="color: #fff">Reset your password</a>
                 </td>
             </tr>
             <tr style="background-color: #f0f0f0">
